src/objects/Warehouse_Pkg__c.object
<CustomObject>
    <fields>
        <fullName>Package_Name__c</fullName>
        <formula>Pkg_Size__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Package Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pkg_Size__c</fullName>
        <label>Pkg Size</label>
        <referenceTo>Pkg_Size__c</referenceTo>
        <relationshipLabel>Warehouse-Pkg</relationshipLabel>
        <relationshipName>Warehouse_Pkg</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Warehouse_Name__c</fullName>
        <formula>Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warehouse Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <referenceTo>Warehouse__c</referenceTo>
        <relationshipLabel>Warehouse-Pkg</relationshipLabel>
        <relationshipName>Warehouse_Pkg</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Warehouse-Pkg</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Warehouse__c</columns>
        <columns>Pkg_Size__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WPID-{0000000000}</displayFormat>
        <label>Warehouse-Pkg ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warehouse-Pkg</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>